config/vs/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: async-vs
  namespace: default
spec:
  hosts:
  - "write-to-db-default.mycluster-guoyc-dff43bc8701fcd5837d6de963718ad39-0000.us-south.containers.appdomain.cloud"
  gateways:
  - knative-serving/cluster-local-gateway
  - knative-serving/knative-ingress-gateway
  http:
  - name: "route_rule1"
    match:
      - headers:
          Prefer:
            exact: respond-async
        ignoreUriCase: true
    route:
    - destination:
        host: producer-service.default.svc.cluster.local #producer-service #async-producer.default.52.116.240.92.xip.io # Destination service, must match service name
        port:
            number: 80 # Post of service, must match service port
